@@ -15,14 +15,6 @@
 #   - IS_64: Defined as "64" if built for 64-bit application.
 #
 # Defines or reads following variables:
-#   - BIN_DIR: Directory for executable.
-#     Default:  ${CMAKE_INSTALL_PREFIX}/bin
-#   - DATA_DIR: Directory for architecture independent data files.
-#     Default: ${CMAKE_INSTALL_PREFIX}/share
-#   - DOC_DIR: Directory for documentation
-#     Default: ${DATA_DIR}/doc
-#   - SYSCONF_DIR: System wide configuration files.
-#     Default: /etc
 #   - LIB_DIR: System wide library path.
 #     Default: ${CMAKE_INSTALL_PREFIX}/lib for 32 bit,
 #              ${CMAKE_INSTALL_PREFIX}/lib64 for 64 bit.
@@ -73,7 +65,6 @@ IF(DEFINED _MANAGE_ENVIRONMENT_CMAKE_)
     RETURN()
 ENDIF(DEFINED _MANAGE_ENVIRONMENT_CMAKE_)
 SET(_MANAGE_ENVIRONMENT_CMAKE_ "DEFINED")
-SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
 
 FUNCTION(SET_COMPILE_ENV var)
     SET(_stage "")
@@ -144,14 +135,6 @@ GET_FILENAME_COMPONENT(CMAKE_FEDORA_MODULE_DIR
     "${MANAGE_ENVIRONMENT_PATH}" PATH CACHE
     )
 
-SET(CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH 
-    ${CMAKE_SOURCE_DIR}/scripts ${CMAKE_SOURCE_DIR}/cmake-fedora/scripts
-    CACHE INTERNAL "CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH"
-    )
-
-## CMAKE_FEDORA_TMP_DIR: Directory stores temporary files.
-SET(CMAKE_FEDORA_TMP_DIR "${CMAKE_BINARY_DIR}/NO_PACK" 
-    CACHE PATH "cmake-fedora tmp dir")
 FILE(MAKE_DIRECTORY "${CMAKE_FEDORA_TMP_DIR}")
 
 ## Print CMake system information
@@ -160,30 +143,18 @@ M_MSG(${M_INFO1} "CMAKE_HOST_SYSTEM_PROCESSOR=${CMAKE_HOST_SYSTEM_PROCESSOR}")
 M_MSG(${M_INFO1} "CMAKE_SYSTEM=${CMAKE_SYSTEM}")
 M_MSG(${M_INFO1} "CMAKE_HOST_PROCESSOR=${CMAKE_SYSTEM_PROCESSOR}")
 
-## Set variables and compile flags
-SET_COMPILE_ENV(BIN_DIR  "${CMAKE_INSTALL_PREFIX}/bin"
-    CACHE PATH "Binary dir"
-    )
-SET_COMPILE_ENV(DATA_DIR "${CMAKE_INSTALL_PREFIX}/share"
-    CACHE PATH "Data dir"
-    )
-SET_COMPILE_ENV(DOC_DIR  "${DATA_DIR}/doc"
-    CACHE PATH "Documentation dir"
-    )
-SET_COMPILE_ENV(SYSCONF_DIR "/etc"
-    CACHE PATH "System configuration dir"
-    )
-SET_COMPILE_ENV(LIBEXEC_DIR "${CMAKE_INSTALL_PREFIX}/libexec"
-    CACHE PATH "LIBEXEC dir"
-    )
+## Set compile flags
+SET_COMPILE_ENV(BIN_DIR)
+SET_COMPILE_ENV(DATA_DIR)
+SET_COMPILE_ENV(DOC_DIR)
+SET_COMPILE_ENV(SYSCONF_DIR)
+SET_COMPILE_ENV(LIB_DIR)
+SET_COMPILE_ENV(LIBEXEC_DIR)
 
 IF(CMAKE_SYSTEM_PROCESSOR MATCHES "64")
-    SET_COMPILE_ENV(IS_64 "64" CACHE STRING "IS_64")
+    SET_COMPILE_ENV(IS_64 "64")
 ENDIF(CMAKE_SYSTEM_PROCESSOR MATCHES "64")
 
-SET_COMPILE_ENV(LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib${IS_64}"
-    CACHE PATH "Library dir"
-    )
 SET_COMPILE_ENV(PRJ_DATA_DIR "${DATA_DIR}/${PROJECT_NAME}"
     CACHE PATH "Project data dir"
     )
