@@ -164,15 +164,15 @@ SET(RPM_SPEC_BUILD_OUTPUT
 make ${RPM_SPEC_MAKE_FLAGS}"
     )
 
-M_MSG(${M_INFO2} "CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH=${CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH}")
-FIND_PROGRAM_ERROR_HANDLING(RPM_CMD
+M_MSG(${M_INFO2} "CMAKE_FEDORA_SCRIPT_PATH_HINTS=${CMAKE_FEDORA_SCRIPT_PATH_HINTS}")
+FIND_PROGRAM_ERROR_HANDLING(RPM_EXECUTABLE
     ERROR_MSG "ManageRPM: rpm not found, rpm build support is disabled."
     ERROR_VAR _manage_rpm_dependency_missing
     VERBOSE_LEVEL ${M_OFF}
     FIND_ARGS NAMES rpm
     )
 
-FIND_PROGRAM_ERROR_HANDLING(RPMBUILD_CMD
+FIND_PROGRAM_ERROR_HANDLING(RPMBUILD_EXECUTABLE
     ERROR_MSG "ManageRPM: rpmbuild-md5 or rpmbuild not found, rpm build support is disabled."
     ERROR_VAR _manage_rpm_dependency_missing
     VERBOSE_LEVEL ${M_OFF}
@@ -184,7 +184,7 @@ FIND_PROGRAM_ERROR_HANDLING(CMAKE_FEDORA_KOJI_CMD
     ERROR_VAR _manage_rpm_dependency_missing
     VERBOSE_LEVEL ${M_OFF}
     FIND_ARGS NAMES cmake-fedora-koji
-    PATHS  ${CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH}
+    HINTS  ${CMAKE_FEDORA_SCRIPT_PATH_HINTS}
     )
 
 
@@ -199,7 +199,7 @@ CMAKE_FEDORA_CONF_GET_ALL_VARIABLES()
 IF(BUILD_ARCH STREQUAL "noarch")
     SET(RPM_BUILD_ARCH ${BUILD_ARCH})
 ELSE(BUILD_ARCH STREQUAL "noarch")
-    EXECUTE_PROCESS(COMMAND ${RPM_CMD} -E "%{_arch}"
+    EXECUTE_PROCESS(COMMAND ${RPM_EXECUTABLE} -E "%{_arch}"
 	COMMAND sed -e "s/^\\.//"
 	OUTPUT_VARIABLE RPM_BUILD_ARCH
 	OUTPUT_STRIP_TRAILING_WHITESPACE
@@ -207,7 +207,7 @@ ELSE(BUILD_ARCH STREQUAL "noarch")
 ENDIF(BUILD_ARCH STREQUAL "noarch")
 
 ## %{dist}
-EXECUTE_PROCESS(COMMAND ${RPM_CMD} -E "%{dist}"
+EXECUTE_PROCESS(COMMAND ${RPM_EXECUTABLE} -E "%{dist}"
     COMMAND sed -e "s/^\\.//"
     OUTPUT_VARIABLE _RPM_DIST_TAG
     OUTPUT_STRIP_TRAILING_WHITESPACE
@@ -347,7 +347,7 @@ MACRO(PACK_RPM)
     ADD_CUSTOM_TARGET_COMMAND(srpm
 	NO_FORCE
 	OUTPUT ${PRJ_SRPM_FILE}
-	COMMAND ${RPMBUILD_CMD} -bs ${_opt_SPEC}
+	COMMAND ${RPMBUILD_EXECUTABLE} -bs ${_opt_SPEC}
 	--define '_sourcedir ${RPM_BUILD_SOURCES}'
 	--define '_builddir ${RPM_BUILD_BUILD}'
 	--define '_srcrpmdir ${RPM_BUILD_SRPMS}'
@@ -362,7 +362,7 @@ MACRO(PACK_RPM)
     ADD_CUSTOM_TARGET_COMMAND(rpm
 	OUTPUT ${PRJ_RPM_FILES}
 	NO_FORCE
-	COMMAND ${RPMBUILD_CMD} --rebuild ${PRJ_SRPM_FILE}
+	COMMAND ${RPMBUILD_EXECUTABLE} --rebuild ${PRJ_SRPM_FILE}
 	--define '_rpmdir ${RPM_BUILD_RPMS}'
 	--define '_builddir ${RPM_BUILD_BUILD}'
 	--define '_buildrootdir ${RPM_BUILD_BUILDROOT}'
