@@ -166,7 +166,7 @@ MACRO(CHANGELOG_TO_STRING strVar)
 
     FIND_PROGRAM_ERROR_HANDLING(CMAKE_FEDORA_KOJI_CMD
 	FIND_ARGS NAMES cmake-fedora-koji
-	PATHS  ${CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH}
+	PATHS  ${CMAKE_FEDORA_SCRIPT_PATH_HINTS}
 	)
 
     SET(CMAKE_FEDORA_TMP_DIR "/tmp")
@@ -359,17 +359,12 @@ ENDIF()
 GET_FILENAME_COMPONENT(CMAKE_FEDORA_MODULE_DIR 
     "${MANAGE_MODULE_PATH}" PATH)
 
+INCLUDE(ManageEnvironmentCommon)
 INCLUDE(ManageString)
 INCLUDE(ManageVariable)
 CMAKE_FEDORA_CONF_GET_ALL_VARIABLES()
 INCLUDE(DateTimeFormat)
 INCLUDE(ManageVersion)
-LIST(APPEND CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH 
-    ${CMAKE_SOURCE_DIR}/Modules ${CMAKE_SOURCE_DIR}/cmake-fedora/Modules 
-    ${CMAKE_SOURCE_DIR}/../../../Modules
-    ${CMAKE_SOURCE_DIR}/../../../cmake-fedora/Modules
-    ${CMAKE_SOURCE_DIR}
-    )
 INCLUDE(ManageRPM)
 
 IF(NOT DEFINED cmd)
