@@ -149,11 +149,11 @@ RELEASE_FEDORA_FIND_DEPENDENCY(GIT_EXECUTABLE git)
 RELEASE_FEDORA_FIND_DEPENDENCY(BODHI-CLIENT_EXECUTABLE bodhi client.py 
     PATHS "/usr/bin/bodhi")
 RELEASE_FEDORA_FIND_DEPENDENCY(CMAKE_FEDORA_KOJI_EXECUTABLE "cmake-fedora-koji"
-    PATHS ${CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH} NO_DEFAULT_PATH)
+    HINTS ${CMAKE_FEDORA_SCRIPT_PATH_HINTS})
 RELEASE_FEDORA_FIND_DEPENDENCY(CMAKE_FEDORA_FEDPKG_EXECUTABLE "cmake-fedora-fedpkg"
-   PATHS ${CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH})
+    HINTS ${CMAKE_FEDORA_SCRIPT_PATH_HINTS})
 RELEASE_FEDORA_FIND_DEPENDENCY(KOJI_BUILD_SCRATCH_EXECUTABLE "koji-build-scratch"
-   PATHS ${CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH})
+    HINTS ${CMAKE_FEDORA_SCRIPT_PATH_HINTS})
 
 ## Set variables
 IF(_manage_release_fedora_dependencies_missing)
